Flickering of object instances #60235

Closed
opened 2019-01-06 14:28:06 +01:00 by Milan Jaros · 8 comments

System Information
Operating system: Debian9
Graphics card: Mesa

Blender Version
Broken: 1753177a

Short description of error
Stones jump into different location in each frame.

Exact steps for others to reproduce the error
Spring: 01_30, ....

**System Information** Operating system: Debian9 Graphics card: Mesa **Blender Version** Broken: 1753177a **Short description of error** Stones jump into different location in each frame. **Exact steps for others to reproduce the error** Spring: 01_30, ....
Author

Added subscriber: @MilanJaros

Added subscriber: @MilanJaros
Sergey Sharybin was assigned by Milan Jaros 2019-01-06 14:28:41 +01:00
Author

Added subscriber: @brecht

Added subscriber: @brecht

Does this happen on render? Animation playback?
What is the SVN revision of the production repo used?

Does this happen on render? Animation playback? What is the SVN revision of the production repo used?
Author

It happens on render. I tried it on commit from Jan 4.

It happens on render. I tried it on commit from Jan 4.
Author

You can check the results on your server. I used BVH2 with primitive=LINE_SEGMENTS, but it happens without those parameters too.

You can check the results on your server. I used BVH2 with primitive=LINE_SEGMENTS, but it happens without those parameters too.

Ok, so it is render. In fact, can reproduce it now on my computer. Looking into it.

Ok, so it is render. In fact, can reproduce it now on my computer. Looking into it.

This issue was referenced by blender/blender@8e35a968c5

This issue was referenced by blender/blender@8e35a968c5ac385d291cd2b08461ef4128f7bab6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#60235
No description provided.